--- a/index.html
+++ b/index.html
@@ -1,7 +1,188 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>Lorem ipsum dolor sit amet, eum et aperiam fuisset platonem, no fabellas scribentur concludaturque duo. Eum ne dictas copiosae prodesset. His soluta nemore ex. Soleat antiopam evertitur et eos, vel dico mazim option an. Id eos probo periculis. Ut his sale oportere, eum modus saepe rationibus ei.</p>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <title>Marian</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normlaize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/font-awesome/5.11.2/css/all.css">
+        <script src="https://kit.fontawesome.com/4d2ed5dd67.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/style.css"/>
+    </head>
+    <body>
+        <header>
+            <button class="nav-toggle" aria-label="toggle navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class ="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#about" class ="nav__link">About</a></li>
+                    <li class="nav__item"><a href="#skills" class ="nav__link">Skills</a></li>
+                    <li class="nav__item"><a href="#" class ="nav__link">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Introduction -->
+        <section class="intro" id="home">
+            <h1 class="section__title section__title--intro">
+                Hi, I am <strong>Marian Horgan</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">Software Engineer</p>
+            <img src="images/mar_grad.jpg" alt="" class="intro__img">
+        </section>
+
+        <!-- My Skills -->
+
+        <section class="my_skills" id="skills">
+            <h2 class="section__title section_title--skills">What I can do...</h2>
+            <div class="skills">
+                <div class="skill">
+                    <h3>Python</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div> <!-- / skill -->
+                <div class="skill">
+                    <h3>HTML</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div> <!-- / skill -->
+                <div class="skill">
+                    <h3>CSS</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div> <!-- / skill -->
+
+            </div> <!-- / skills -->
+            <div class="skills">
+                <div class="skill">
+                    <h3>Java</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div> <!-- / skill -->
+                <div class="skill">
+                    <h3>C++</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div> <!-- / skill -->
+                <div class="skill">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div> <!-- / skill -->
+
+            </div> <!-- / skills -->
+            <a href="#work" class="btn">What I have done</a>
+        </section>
+
+        <!-- About Me -->
+
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am...</h2>
+            <p class="section__subtitle section__subtitle--about">
+            A little bit about me</p>
+            <div class="about-me__body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum
+                </p>
+            </div>
+
+            <img src="images/marian_graduation.jpg" alt="" class="about-me__img">
+
+        </section>
+
+        <!-- My Work -->
+        <section class="my-work" id="work">
+            <h2 class="section__title section__title--">What I have achieved...</h2>
+            <p class="section__subtitle">A range of milestones I have achieved</p>
+
+            <div class="portfolio">
+                <!-- Portfolio item 01-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 02-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 03-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+                <!-- Portfolio item 04-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 05-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 06-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+                <!-- Portfolio item 07-->
+                <a href="portfolio/wit.html" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+
+                <!-- Portfolio item 08-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                </a>
+                
+            </div>
+        </section>
+
+        <!-- Footer-->
+        <footer class="footer">
+            <a href="" class="footer-link">email</a>
+            <ul class="social-list">
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://ie.linkedin.com/in/marianhorgan">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+            </ul>
+        </footer>
+
+        <script src="js/index.js"></script>
+    </body>
 </html>
