Update general information March 24

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Hi, I am <strong>Marian Horgan</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Software Engineer</p>
-            <img src="images/mar_grad.jpg" alt="" class="intro__img">
+            <img src="images/marianhorgan_headshot.jpg" alt="" class="intro__img">
         </section>
 
         <!-- My Skills -->
@@ -39,47 +39,28 @@
             <h2 class="section__title section_title--skills">What I can do...</h2>
             <div class="skills">
                 <div class="skill">
-                    <h3>Python</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h3>Firmware Development</h3>
+                    <p>I have over five years experience developing, testing and releasing firmware as part of the QAT 
+                        team at Intel. I implement features for symmetric cryptography and data compression services that 
+                        get accelerated by the QAT hardware.
+                    </p>
                 </div> <!-- / skill -->
                 <div class="skill">
-                    <h3>HTML</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h3>Python Programming</h3>
+                    <p>My first introduction to programming was with Python and is a language that I come back to time and 
+                        time again. I use Python in my role and in my hobby projects and have completed the professional
+                        certificate with OpenEDG Python Institute.
+                    </p>
                 </div> <!-- / skill -->
                 <div class="skill">
-                    <h3>CSS</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h3>Web Development</h3>
+                    <p>I have a BSc in Computer Science with Web Systems Engineering from Univeristy College Cork. 
+                        I enjoy the creativity of designing and building websites for fun. This is an area of tech 
+                        that I would love to explore more.
+                    </p>
                 </div> <!-- / skill -->
 
             </div> <!-- / skills -->
-            <div class="skills">
-                <div class="skill">
-                    <h3>Java</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div> <!-- / skill -->
-                <div class="skill">
-                    <h3>C++</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div> <!-- / skill -->
-                <div class="skill">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div> <!-- / skill -->
-
-            </div> <!-- / skills -->
-            <a href="#work" class="btn">What I have done</a>
         </section>
 
         <!-- About Me -->
@@ -89,19 +70,11 @@
             <p class="section__subtitle section__subtitle--about">
             A little bit about me</p>
             <div class="about-me__body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                    anim id est laborum
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                    anim id est laborum
+                <p>I am a motivated Software Engineer with 6+ years of industry experience adept in all phases of software 
+                    development and product life cycle within an Agile environment. I have hands-on experience in developing, 
+                    implementing and executing projects for complex encryption systems in a $60+ billion annual 
+                    revenue multinational. Some of my strongest skills include code design, debugging, documentation 
+                    and code reviews.
                 </p>
             </div>
 
@@ -117,12 +90,12 @@
             <div class="portfolio">
                 <!-- Portfolio item 01-->
                 <a href="#" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                    <img src="images/wit_scholarship.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 02-->
-                <a href="#" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                <a href="https://loveofthegame.org/2021-hackathon/2021-demo-day/" class="portfolio__item">
+                    <img src="images/fierce_lotg_demoday.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 03-->
@@ -158,7 +131,6 @@
 
         <!-- Footer-->
         <footer class="footer">
-            <a href="" class="footer-link">email</a>
             <ul class="social-list">
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://ie.linkedin.com/in/marianhorgan">
@@ -166,18 +138,13 @@
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="">
+                    <a class="social-list__link" href="https://github.com/marianhorgan">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                </li>
-                <li class="social-list__item">
-                    <a class="social-list__link" href="">
-                        <i class="fab fa-twitter"></i>
+                    <a class="social-list__link" href="mailto:marianmhorgan@gmail.com">
+                        <i class="fas fa-envelope"></i>
                     </a>
                 </li>
             </ul>
