Add portfolio pictures and CV

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Marian</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normlaize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/font-awesome/5.11.2/css/all.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <script src="https://kit.fontawesome.com/4d2ed5dd67.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css"/>
     </head>
@@ -40,23 +39,23 @@
             <div class="skills">
                 <div class="skill">
                     <h3>Firmware Development</h3>
-                    <p>I have over five years experience developing, testing and releasing firmware as part of the QAT 
-                        team at Intel. I implement features for symmetric cryptography and data compression services that 
-                        get accelerated by the QAT hardware.
+                    <p>I have over five years experience developing, testing and releasing firmware as part of the Quick Assist
+                        Technology (QAT) team at Intel. I implement features for symmetric cryptography and data compression 
+                        services that get accelerated by the QAT hardware.
                     </p>
                 </div> <!-- / skill -->
                 <div class="skill">
                     <h3>Python Programming</h3>
-                    <p>My first introduction to programming was with Python and is a language that I come back to time and 
-                        time again. I use Python in my role and in my hobby projects and have completed the professional
-                        certificate with OpenEDG Python Institute.
+                    <p>My first introduction to programming was with Python and it is a language that I come back to time and 
+                        time again. I use Python in my role as well as in my hobby projects such as the IoT concussion wearable. 
+                        I have completed the professional certificate with OpenEDG Python Institute.
                     </p>
                 </div> <!-- / skill -->
                 <div class="skill">
                     <h3>Web Development</h3>
                     <p>I have a BSc in Computer Science with Web Systems Engineering from Univeristy College Cork. 
-                        I enjoy the creativity of designing and building websites for fun. This is an area of tech 
-                        that I would love to explore more.
+                        I enjoy the creativity of designing and building websites from a front-end perspective. 
+                        This is an area of tech that I would love to explore more professionally.
                     </p>
                 </div> <!-- / skill -->
 
@@ -70,11 +69,15 @@
             <p class="section__subtitle section__subtitle--about">
             A little bit about me</p>
             <div class="about-me__body">
-                <p>I am a motivated Software Engineer with 6+ years of industry experience adept in all phases of software 
-                    development and product life cycle within an Agile environment. I have hands-on experience in developing, 
-                    implementing and executing projects for complex encryption systems in a $60+ billion annual 
-                    revenue multinational. Some of my strongest skills include code design, debugging, documentation 
-                    and code reviews.
+                <p>I am a software engineer from Cork, Ireland, with over 6 years of industry experience.
+                    I'm currently based in Dublin, working on exciting new firmware features at Intel.
+                    I'm a highly creative individual with a passion for trying new things. From oil painting
+                    to cold plunge sea swimming, I'll dip my toe (or paint brush) in nearly anything.
+                </p>
+                <p>With a mindset for continous growth, I am always looking for new opportunities
+                    to expand my skillset. For more in depth detail on my current skills and 
+                    experience, check out my <a href="docs/Marian Horgan Resume 2024.pdf">CV</a> and 
+                    past <a href="#work">projects</a> below.
                 </p>
             </div>
 
@@ -85,7 +88,7 @@
         <!-- My Work -->
         <section class="my-work" id="work">
             <h2 class="section__title section__title--">What I have achieved...</h2>
-            <p class="section__subtitle">A range of milestones I have achieved</p>
+            <p class="section__subtitle">Some past projects, events, and achievements</p>
 
             <div class="portfolio">
                 <!-- Portfolio item 01-->
@@ -94,31 +97,30 @@
                 </a>
 
                 <!-- Portfolio item 02-->
+                <a href="#" class="portfolio__item">
+                    <img src="images/we_innovate_cert.jpg" alt="" class="portfolio__img">
+                </a>
+                <!-- Portfolio item 03-->
                 <a href="https://loveofthegame.org/2021-hackathon/2021-demo-day/" class="portfolio__item">
                     <img src="images/fierce_lotg_demoday.jpg" alt="" class="portfolio__img">
                 </a>
-
-                <!-- Portfolio item 03-->
-                <a href="#" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
-                </a>
                 <!-- Portfolio item 04-->
                 <a href="#" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                    <img src="images/growlab_marian_2021.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 05-->
                 <a href="#" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                    <img src="images/volunteering_engineering.jpg" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 06-->
                 <a href="#" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                    <img src="images/shortstack_conf.png" alt="" class="portfolio__img">
                 </a>
                 <!-- Portfolio item 07-->
                 <a href="portfolio/wit.html" class="portfolio__item">
-                    <img src="images/pic01.jpg" alt="" class="portfolio__img">
+                    <img src="images/intel_stem_winners_2017.JPG" alt="" class="portfolio__img">
                 </a>
 
                 <!-- Portfolio item 08-->
